# Brainthread

./: .gitignore  BrainHelp.cpp  BrainHelp.h  BrainThread.cpp  BrainThread.h  BrainThreadExceptions.h  BrainThreadProcess.cpp  BrainThreadProcess.h  BrainThreadRuntimeException.h  Brainthread.opensdf  Brainthread.sln  Brainthread.vcxproj  Brainthread.vcxproj.filters  CMakeLists.txt  CodeAnalyser.cpp  CodeAnalyser.h  CodeOptimizer.cpp  CodeOptimizer.h  CodeTape.cpp  CodeTape.h  DebugLogStream.cpp  DebugLogStream.h  Debuger.cpp  Debuger.h  Enumdefs.h  FunctionHeap.cpp  FunctionHeap.h  Interpreter.cpp  Interpreter.h  LogStream.cpp  LogStream.h  MemoryHeap.cpp  MemoryHeap.h  MemoryTape.cpp  MemoryTape.h  MessageLog.cpp  MessageLog.h  ParseErrors.cpp  ParseErrors.h  Parser.cpp  (+10 more)
Brainthread/: BFChildProcesses.cpp  BFChildProcesses.h  BrainThread.cpp  BrainThread.h  BrainThreadProcess.cpp  BrainThreadProcess.h  BrainThreadRuntimeException.cpp  BrainThreadRuntimeException.h  Brainthread.vcxproj  Brainthread.vcxproj.filters  CodeTape.cpp  CodeTape.h  MemoryHeap.h  MemoryTape.cpp  MemoryTape.h  ParseErrors.cpp  Parser.cpp  Parser.h  main.cpp
Debug/: Brainthread.exe.recipe  Brainthread.ilk
examples/: fib.b  fibonacci.bt  life.b  thread-test.bt
src/: BrainHelp.cpp  BrainHelp.h  BrainThread.cpp  BrainThread.h  BrainThreadExceptions.cpp  BrainThreadExceptions.h  BrainThreadProcess.cpp  BrainThreadRuntimeException.cpp  BrainThreadRuntimeException.h  CodeAnalyser.cpp  CodeAnalyser.h  CodeTape.h  DebugLogStream.cpp  DebugLogStream.h  FunctionHeap.cpp  FunctionHeap.h  Interpreter.cpp  (+11 more)
(+3 files in other folders)
